[gd_scene load_steps=2 format=2]

[ext_resource path="res://weapons/Hitbox.gd" type="Script" id=1]

[node name="Hitbox" type="Area2D"]
collision_layer = 0
collision_mask = 3072
script = ExtResource( 1 )

[node name="ImmunityTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="ImmunityTimer" to="." method="_on_ImmunityTimer_timeout"]
